name          : tbr
version       : 0.1.0.0
synopsis      : Tool to manage my reading list.
description   : A command line tool to help me maintain my reading list in a
                readable format.
license       : MIT
license-file  : LICENSE
author        : Abhinav Gupta
maintainer    : mail@abhinavg.net
category      : Utility
build-type    : Simple
cabal-version : >=1.8

flag library-only
    Description: Build only the library
    Default:     False

library
  exposed-modules: TBR
                 , TBR.Reader
                 , TBR.Types
                 , TBR.Util
                 , TBR.Writer
  hs-source-dirs : .
  ghc-options    : -Wall
  build-depends  : base
                 , attoparsec            >= 0.10
                 , containers            >= 0.4
                 , ghc-prim
                 , mtl                   >= 2.1
                 , text                  >= 0.11
                 , transformers          >= 0.3

executable tbr
  if flag(library-only)
    buildable    : False
  hs-source-dirs : app
  main-is        : main.hs
  ghc-options    : -Wall 
  other-modules  : TBR.Core
                 , TBR.Monad
                 , TBR.Script
  build-depends  : base
                 , configurator          >= 0.2
                 , containers            >= 0.4
                 , directory
                 , either                >= 3.1
                 , errors                >= 1.3
                 , filepath              >= 1.3
                 , mtl                   >= 2.1
                 , optparse-applicative  >= 0.5
                 , random
                 , shakespeare-text      >= 1.0
                 , tbr
                 , text                  >= 0.11
                 , transformers          >= 0.3
